--- a/ICT13580034B2/ICT13580034B2/MainPage.xaml
+++ b/ICT13580034B2/ICT13580034B2/MainPage.xaml
@@ -2,12 +2,85 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ICT13580034B2"
-             x:Class="ICT13580034B2.MainPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             x:Class="ICT13580034B2.MainPage"
+             Title="Tub Shop">
+    <ContentPage.ToolbarItems>
+
+        <ToolbarItem
+            Text="New"
+            x:Name="newButton"/>
+
+    </ContentPage.ToolbarItems>
+
+    <ListView
+        x:Name="productListView"
+        RowHeight="100">
+
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ViewCell>
+
+                    <ViewCell.ContextActions>
+
+                        <MenuItem
+                            Text="Edit"
+                            CommandParameter="{Binding .}"
+                            Clicked="Edit_Clicked"/>
+
+                        <MenuItem
+                            Text="Delete"
+                            CommandParameter="{Binding .}"
+                            IsDestructive="True"
+                            Clicked="Delete_Clicked"/>
+
+                    </ViewCell.ContextActions>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="50"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Image
+                            Source="https://upload.wikimedia.org/wikipedia/en/f/f9/No-image-available.jpg"
+                            BackgroundColor="Wheat"
+                            HeightRequest="100"/>
+
+                        <StackLayout
+                            Grid.Column="1">
+
+                            <Label
+                                Text="{Binding Name}"
+                                FontAttributes="Bold"
+                                TextColor="Navy"/>
+
+                            <Label
+                                Text="{Binding Description}"
+                                LineBreakMode="TailTruncation"/>
+
+                            <Label
+                                Text="{Binding SellPrice, StringFormat='ราคาขาย {0:N0} บาท'}"/>
+
+                            <Label
+                                Text="{Binding Stock, StringFormat='สินค้าคงเหลือ {0} รายการ'}"/>
+
+                        </StackLayout>
+
+                        <Button
+                            Text="+"
+                            FontSize="30"
+                            Grid.Column="2"
+                            Margin="5"
+                            BackgroundColor="Silver"
+                            VerticalOptions="End"
+                            HeightRequest="50"/>
+
+                    </Grid>
+
+                </ViewCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
 </ContentPage>
